se agrego pagina de retiro

--- a/index.html
+++ b/index.html
@@ -70,14 +70,22 @@
    </section>
    <section class="four-section" id="four-section" style="display: none">
         <div class="azul">
-            <img class="Nivel" src="img/thermometer-1_icon-icons.com_62244.png" alt="">
-            <p id="unaño"> &lt;---  ¡Ya tienes 1 año de aportaciones!</p>
-            <p id="seismeses"> &lt;---  ¡Ya tienes 6 meses de aportaciones!</p>
-            <p id="afore"> &lt;---  ¡Ya tienes tu afore!</p>
+                <h1 class="wayak-1">Wayak</h1>
         </div>
         <div class="blanco">
-            <img class="Retiro" src="img/mecedora.png" alt="">
-            <p id="retiro">Para tener un retiro soñado, necesitas saber cuánto quisieras recibir cada mes a partir de que ya no trabajes.</p>
+                <img class="Nivel" src="img/thermometer-1_icon-icons.com_62244.png" alt="">
+                <div class="medidas-ter">
+                    <p id="unaño"> &lt;---  ¡Ya tienes 1 año de aportaciones!</p>
+                    <p id="seismeses"> &lt;---  ¡Ya tienes 6 meses de aportaciones!</p>
+                    <p id="afore"> &lt;---  ¡Ya tienes tu afore!</p>
+        
+                </div>
+                <div class="mece">
+                    <img class="retiro-1" src="img/mecedora.png" alt="retiro" width="80" height="80">
+                    <img  class="clo" src="img/clock_icon-icons.com_54407.png" alt="" width="20" height="20">
+                </div>
+            <p id="retiro">Para tener un retiro soñado,<br>necesitas saber cuánto<br>
+                quisieras recibir cada mes<br>a partir de que ya no trabajes.</p>
         </div>
         <div class="pensión">
             <p class="mensual">Pensión mensual: </p>
