se agrego termometro

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <h1 class="wayak-1">Wayak</h1>
         </div>
         <div class="blanco">
-                <img class="Nivel" src="img/thermometer-1_icon-icons.com_62244.png" alt="">
-                <div class="medidas-ter">
+            <div class="medidas-ter">
+                    <img class="Nivel" src="img/thermometer-1_icon-icons.com_62244.png" alt="" width="70" height="70">
                     <p id="unaño"> &lt;---  ¡Ya tienes 1 año de aportaciones!</p>
                     <p id="seismeses"> &lt;---  ¡Ya tienes 6 meses de aportaciones!</p>
                     <p id="afore"> &lt;---  ¡Ya tienes tu afore!</p>
