se agrego tabla de esperanza

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="formula">
             <center>
 
-                <p>Cálculo</p>
+                <p class="cal">Cálculo</p><br><hr color="blue" size="1" width="90" id="linea-1">
                 <p>Edad Actual:<br> <input type="number" name="" id="Actual" placeholder="Edad actual" class="ab"></p><br>
                
                 <p>Edad de Retiro: <br><input type="text" placeholder="Edad de retiro" class="cd"></p><br>
@@ -103,8 +103,15 @@
             </center>
             
         </div>
-        <div>
-            <p>Considerando que la esperanza de vida en México es de 76 años, la cantidad que debes ahorrar cada mes para tu retiro soñado es:</p>
+        <div class="esperanza">
+            <center>
+                <p class="vida">Considerando que la<br>
+                    esperanza de vida en México<br>
+                    es de 76 años, la cantidad<br>
+                    que debes ahorrar cada mes<br>
+                    para tu retiro soñado es:</p><br>
+                    <hr color="blue" size="1" width="120" id="linea">
+            </center>
         </div>
     </section>
   
