se termino pagina de retiro falta imprimirlo en pantalla

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 quisieras recibir cada mes<br>a partir de que ya no trabajes.</p>
         </div>
         <div class="pensión">
-            <p class="mensual">Pensión mensual: </p>
+            <p class="mensual">Pensión mensual deseada: </p>
         </div>
-        <input type="number" placeholder="Ingresar cantidad" class="cantidad">
+        <input type="number" placeholder="Ingresar cantidad" class="cantidad" id="pension-Deseada">
         <div class="formula">
             <center>
 
