ya se termino la ultima pagina

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                     para tu retiro soñado es:</p><br>
                     <hr color="blue" size="1" width="120" id="linea">
                     <button id="hacer-cal" class="hacer-cal">Calcular</button>
+                    <div class="root" id="root">
+                    </div>
             </center>
         </div>
     </section>
