ya esta arreglada la segunda pagina

--- a/index.html
+++ b/index.html
@@ -37,15 +37,18 @@
     </section>
     <!--Sección de sueños-->
     <section class="second-section" id="second-section" style="display: none">
-            <div class="azul">
+            <div class="azul-2">
                 <h1 class="wayak-1">Wayak</h1>
             </div>
-            <div class="blanco-1">
-                <h2 class="dreams">¿Cuál es tu sueño?</h2>
-                <a href="#" class="btn-travel" id="btn-travel"><img src="img/007suitcase_113728.png" alt="icon-travel"></a>
-                <a href="#" class="btn-house" id="btn-house"><img src="img/house-icon_34406.png" alt="icon-house"></a>
-                <a href="#" class="btn-car" id="btn-car"><img src="img/car-electric_121944.png" alt="icon-car"></a>
-                <a href="#" class="btn-retirement" id="btn-retirement"><img src="img/mecedora.png" alt="icon-retirement"></a>
+            <div class="blanco-2">
+                <center>
+
+                    <h2 class="dreams">¿Cuál es tu sueño?</h2>
+                    <a href="#" class="btn-travel" id="btn-travel"><img src="img/007suitcase_113728.png" alt="icon-travel" ></a>
+                    <a href="#" class="btn-house" id="btn-house"><img src="img/house-icon_34406.png" alt="icon-house"  ></a>
+                    <a href="#" class="btn-car" id="btn-car"><img src="img/car-electric_121944.png" alt="icon-car"  ></a>
+                    <a href="#" class="btn-retirement" id="btn-retirement"><img src="img/mecedora.png" alt="icon-retirement" ></a>
+                </center>
             </div>
     </section>
    <!--Sección de finanzas personales-->
