se pulieron detalles minimos

--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
            </table>
        </div>
    </section>
+   <!--SECCIÓN DE CALCULO DE AHORRO PARA PENSIÓN-->
    <section class="four-section" id="four-section" style="display: none">
         <div class="azul">
                 <h1 class="wayak-1">Wayak</h1>
+
+
         </div>
         <div class="blanco">
             <div class="medidas-ter">
